--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class=" scrollbar-type-1 sb-cyan">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>MGroundStation</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="m4-cloak h-vh-100" id="app">
     <!-- built files will be auto injected -->
   </body>
 </html>
